# spvc

./: Cargo.toml  README.md  in.vert  out.spv  ref.spv
glsl-struct/: Cargo.toml
glsl-struct-derive/: Cargo.toml
glsl-struct-derive/src/: lib.rs
glsl-struct/src/: lib.rs
spvc-shader/: Cargo.toml
spvc-shader/src/: access.rs  boxed_glsl_struct_member.rs  built_in_var.rs  errors.rs  function.rs  global_var.rs  global_variable.rs  glsl_struct.rs  glsl_struct_member.rs  input_var.rs  interface.rs  lib.rs  load.rs  matrix_dims.rs  op.rs  op_key.rs  ops.rs  output_var.rs  pointer.rs  primitives.rs  reg_op.rs  reg_var.rs  registered_load.rs  registered_statement.rs  registered_variable.rs  shader.rs  spirv_type.rs  statement.rs  storage_class.rs  struct.rs  struct_member.rs  type_key.rs  types.rs  uniform_var.rs  var.rs  variable.rs  vector_dims.rs
spvc-shader/src/ops/: bad_op.rs  expand_vec.rs  load.rs  mod.rs  mul.rs  store.rs  transpose.rs
spvc-shaders/: Cargo.toml
spvc-shaders/src/: lib.rs  pbr.rs
src/: errors.rs  glsl_struct.rs  lib.rs  main.rs  spirv_shader_base.rs
