[package]
name = "spvc-shader"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]

[features]
default = ["vulkan"]
vulkan = ["vulkano"]

[dependencies]
error-chain = "0.11"
rspirv = {version = "0.4", git = "https://github.com/google/rspirv.git"}
spirv_headers = {version = "1.1", git = "https://github.com/google/rspirv.git"}

[dependencies.vulkano]
version = "0.6"
optional = true
